--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/339fea82da1b99beda1eb7b67cc72e1a'/></h2>
-Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 524 points<br>
+Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 535 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -100,6 +100,7 @@ Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Socialite (Level 8)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Socialite (Level 9)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Master Stone Mason (Level 10)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Master Stone Mason (Level 8)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Master Stone Mason (Level 9)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -125,40 +126,41 @@ Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-1748 log
-1168 commit
-1043 status
- 843 add
- 533 checkout
- 507 push
- 452 diff
- 365 branch
- 272 show
- 173 rebase
- 129 reset
- 107 fetch
-  82 remote
-  60 pull
-  55 stash
-  53 subtree
-  46 clean
-  34 merge
-  32 init
-  30 config
+1813 log
+1268 commit
+1147 status
+ 956 add
+ 584 checkout
+ 575 push
+ 463 diff
+ 409 branch
+ 279 show
+ 180 rebase
+ 147 reset
+ 120 fetch
+  86 remote
+  66 pull
+  59 stash
+  58 subtree
+  48 clean
+  39 merge
+  38 config
+  34 init
+  26 rm
   24 cherry-pick
-  20 rm
-  18 reflog
-  17 help
-  11 mv
-  11 clone
-   9 revert
+  19 reflog
+  18 help
+  13 revert
+  13 mv
+  13 clone
+   7 --version
    6 ln
    5 update-ref
    5 ns
-   5 --version
    4 notes
    3 --help
    2 sun
+   2 lsn
    1 statsu
    1 stats
    1 stahs
@@ -167,7 +169,6 @@ Git commands sorted by usage:
    1 rever
    1 reabse
    1 nls
-   1 lsn
    1 ls-remote
    1 ls
    1 iff
